--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ workflows:
   run_and_deploy:
     triggers:
       - schedule:
-          cron: "0 * * * *"
+          cron: "0 0,3,6,9,12,15,18,21 * * *"
           filters:
             branches:
               only:
